фикс багов